--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div id="root"></div>
-  <script src='index.js' type="module"></script>
+  <script src='/index.js' type="module"></script>
 </body>
 
 </html>
