Decoding JWT client-side (no sharing tokens please).

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
   <title>TimeTrackr</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+  <!-- JWT decoding -->
+  <script src="https://cdn.jsdelivr.net/npm/jwt-decode@2.2.0/build/jwt-decode.min.js"></script>
+
   <!-- UIkit -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/css/uikit.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit.min.js"></script>
