--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,14 @@
   <title>TimeTrackr</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+  <style>
+    html,
+    body {
+      background-color: #f7f7f7;
+      min-height: 100vh;
+    }
+  </style>
+
   <!-- JWT decoding -->
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode@2.2.0/build/jwt-decode.min.js"></script>
 
