--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <div id="root"></div>
-  <script src='/index.js' type="module"></script>
+  <script src='/app.js' type="module"></script>
 </body>
 
 </html>
