--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,10 @@
   <title>TimeTrackr</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
+  <!-- Lodash -->
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js"
+    integrity="sha256-Jvh9+A4HNbbWsWl1Dw7kAzNsU3y8elGIjLnUSUNMtLg=" crossorigin="anonymous"></script>
+
   <!-- UIkit -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/css/uikit.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.4/dist/js/uikit.min.js"></script>
